# projetoEmbarcador

./: .gitignore  README.md  growth.txt  growth2.txt
src/: CMakeLists.txt  main.cpp  main.cpp.save
src/components/: checkGrowth.cpp  display.cpp  tempMeasure.c
src/headers/: checkGrowth.hpp  display.hpp  general.hpp  tempMeasure.h  tempMeasure.hpp
